--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
     </form>
 
     <h2>Results</h2>
+    <button id="clearButton">Clear Results</button>
     <table id="resultsTable">
         <thead>
             <tr>
@@ -144,6 +145,12 @@
                 cells[2].textContent = data.result;
             }
         }
+
+        // Clear button functionality
+        document.getElementById('clearButton').addEventListener('click', () => {
+            const tbody = document.querySelector('#resultsTable tbody');
+            tbody.innerHTML = '';
+        });
     </script>
 </body>
 
