--- a/public/index.html
+++ b/public/index.html
@@ -187,8 +187,11 @@
         <label for="promptInstructions">Prompt Instructions:</label>
         <textarea id="promptInstructions" rows="4" placeholder="Describe how the prompts should be generated (domain, style, constraints, etc.)"></textarea>
 
-        <label for="numPrompts">Number of Prompts to Generate:</label>
-        <input type="number" id="numPrompts" min="1" max="100" value="5">
+    <label for="numPrompts">Number of Prompts to Generate:</label>
+    <input type="number" id="numPrompts" min="1" max="500" value="5">
+    <div id="safetyNotice" style="display:none;margin-top:6px;font-size:12px;line-height:1.3;padding:8px 10px;border:1px solid #f59e0b33;border-radius:8px;background:rgba(245,158,11,.08);color:#fbbf24;">
+        Large batch detected. Consider lowering concurrency or splitting batches to avoid rate limits.
+    </div>
 
         <div class="actions">
             <button type="button" class="btn" id="generatePromptsBtn">Generate Prompts</button>
@@ -205,6 +208,9 @@
 
         <label for="maxTokens">Max Tokens:</label>
         <input type="number" id="maxTokens" min="1" value="100" required>
+
+    <label for="concurrency">Concurrency (max parallel requests):</label>
+    <input type="number" id="concurrency" min="1" value="20">
 
         <div class="actions">
             <button type="button" class="btn secondary" id="startWithPromptsBtn">Start Test with Generated Prompts</button>
@@ -272,6 +278,13 @@
             const model = document.getElementById('model').value;
             const instructions = document.getElementById('promptInstructions').value.trim();
             const numPrompts = parseInt(document.getElementById('numPrompts').value) || 1;
+            const conc = parseInt(document.getElementById('concurrency').value) || 20;
+            const notice = document.getElementById('safetyNotice');
+            if (numPrompts > conc * 5 || numPrompts > 300) {
+                notice.style.display = 'block';
+            } else {
+                notice.style.display = 'none';
+            }
 
             if (!apiUrl || !apiKey || !model) {
                 alert('Please provide API URL, API Key, and Model.');
@@ -314,6 +327,7 @@
             const apiKey = document.getElementById('apiKey').value;
             const model = document.getElementById('model').value;
             const maxTokens = parseInt(document.getElementById('maxTokens').value);
+            const concurrency = parseInt(document.getElementById('concurrency').value) || 20;
             const raw = document.getElementById('generatedPrompts').value;
             let prompts = raw.split('\n').map(s => s.trim()).filter(Boolean);
             const appendFlag = document.getElementById('appendNoThink').checked;
@@ -328,11 +342,17 @@
 
             const tbody = document.querySelector('#resultsTable tbody');
             tbody.innerHTML = '';
+            const notice = document.getElementById('safetyNotice');
+            if (prompts.length > concurrency * 5 || prompts.length > 300) {
+                notice.style.display = 'block';
+            } else {
+                notice.style.display = 'none';
+            }
 
             const response = await fetch('/api/test-concurrency', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ prompts, apiUrl, apiKey, model, maxTokens })
+                body: JSON.stringify({ prompts, apiUrl, apiKey, model, maxTokens, concurrency })
             });
 
             const reader = response.body.getReader();
