--- a/public/index.html
+++ b/public/index.html
@@ -206,11 +206,13 @@
 
     <!-- Removed old single-prompt + numRequests inputs -->
 
-        <label for="maxTokens">Max Tokens:</label>
-        <input type="number" id="maxTokens" min="1" value="100" required>
+    <label for="maxTokens">Max Tokens:</label>
+    <input type="number" id="maxTokens" min="1" value="10000" required>
 
-    <label for="concurrency">Concurrency (max parallel requests):</label>
-    <input type="number" id="concurrency" min="1" value="20">
+    <label for="concurrency">Concurrency (max parallel requests, 0 = all at once):
+        <span style="font-size:12px;margin-left:8px;color:var(--muted);cursor:help" title="Set to 0 to attempt all prompts at once. Be careful—this opens that many parallel streams and may trigger provider rate limits or local resource exhaustion.">ⓘ</span>
+    </label>
+    <input type="number" id="concurrency" min="0" value="0">
 
         <div class="actions">
             <button type="button" class="btn secondary" id="startWithPromptsBtn">Start Test with Generated Prompts</button>
@@ -278,9 +280,11 @@
             const model = document.getElementById('model').value;
             const instructions = document.getElementById('promptInstructions').value.trim();
             const numPrompts = parseInt(document.getElementById('numPrompts').value) || 1;
-            const conc = parseInt(document.getElementById('concurrency').value) || 20;
+            let conc = parseInt(document.getElementById('concurrency').value);
+            if (Number.isNaN(conc)) conc = 0; // default to 0 meaning all at once
+            const effectiveConc = conc === 0 ? numPrompts : conc;
             const notice = document.getElementById('safetyNotice');
-            if (numPrompts > conc * 5 || numPrompts > 300) {
+            if (numPrompts > effectiveConc * 5 || numPrompts > 300) {
                 notice.style.display = 'block';
             } else {
                 notice.style.display = 'none';
@@ -327,7 +331,8 @@
             const apiKey = document.getElementById('apiKey').value;
             const model = document.getElementById('model').value;
             const maxTokens = parseInt(document.getElementById('maxTokens').value);
-            const concurrency = parseInt(document.getElementById('concurrency').value) || 20;
+            let concurrency = parseInt(document.getElementById('concurrency').value);
+            if (Number.isNaN(concurrency)) concurrency = 0; // default 0 == all at once
             const raw = document.getElementById('generatedPrompts').value;
             let prompts = raw.split('\n').map(s => s.trim()).filter(Boolean);
             const appendFlag = document.getElementById('appendNoThink').checked;
@@ -343,7 +348,8 @@
             const tbody = document.querySelector('#resultsTable tbody');
             tbody.innerHTML = '';
             const notice = document.getElementById('safetyNotice');
-            if (prompts.length > concurrency * 5 || prompts.length > 300) {
+            const effectiveConc = concurrency === 0 ? prompts.length : concurrency;
+            if (prompts.length > effectiveConc * 5 || prompts.length > 300) {
                 notice.style.display = 'block';
             } else {
                 notice.style.display = 'none';
